# AI-hackathon-CDA

./: .env.example  .gitignore  =0.2.0  Booking.com _ Official site _ The best hotels, flights, car rentals & accommodations.html  DOCUMENTATION.md  IMPROVED_AUTONOMOUS_AGENT_PROMPT.txt  IMPROVEMENTS_SUMMARY.txt  MCP_SYSTEM_PROMPT_SECTION.txt  README.md  diagnose_mcp.py  publicapi.yaml  pyproject.toml  requirements.txt  test_gemini_mcp_suite.py  test_gemini_only.py  test_gemini_simple.py  test_mcp_suite.py
src/prolific_mcp/: __init__.py  config.py  gemini_client.py  prolific_client.py  server.py
